# sil

./: .gitignore  .pre-commit-config.yaml  README.md  bricks-dev.sh  pom.xml  pyproject.toml
ImageJ/plugins/CTofSoil/: Grey_Ramp.java  Shear_Cycle.java  Slope_Cycle.java  ca
ImageJ/plugins/CTofSoil/ca/petrographic/: SilLibrary.java
ImageJ/plugins/CTofSoil/ca/petrographic/mains/: Bricks.java  GreyRamp.java  ShearCycle.java  SlopeCycle.java
examples/: bricks-demo  grey-ramp-demo  menger-sponge-demo  shear-cycle-demo  slope-cycle-demo
py_petrographic_ca/: menger_sponge.py
scripts/: java-list  java-switch  mvn-compile
src/main/java/: ca
