[tool.poetry]
name = "sil"
version = "0.1.0"
description = ""
authors = ["edoules <ema@uoguelph.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
